# GBA-Creator

./: .gitignore  CMakeLists.txt  library.h
Engine/: CmakeLists.txt
Engine/include/: GBAEngine.h
Engine/include/ECS/: ComponentContainer.h  ECSConstants.h  ECSCore.h  Entity.h  EntityManager.h  IEntityComponent.h  ISystem.h  SystemManager.h  World.h
Engine/include/Utils/: g_queue.h
Engine/src/: GBAEngine.cpp
Engine/src/DataStructures/: DynamicArray.cpp  ManagedArray.h
Engine/src/ECS/: ECSCore.cpp  Entity.cpp  EntityManager.cpp  ISystem.cpp  SystemManager.cpp  World.cpp
Tests/ECS_Test/: CMakeLists.txt  cmake_install.cmake
Tests/ECS_Test/src/: ComponentDefinitions.h  main.cpp  main.h
Tests/Test_Core/: CMakeLists.txt
Tests/Test_Core/include/: test_core.h
Tests/Test_Core/src/: test_core.cpp
src/: GBAEngine.cpp  GBAEngine.h  Makefile
src/DataStructures/: DynamicArray.h  ManagedArray.cpp
src/ECS/: ECSConstants.h  ECSCore.cpp  ECSCore.h
src/ECS/Components/: ComponentContainer.cpp  ComponentContainer.h  IEntityComponent.h
src/ECS/Entities/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/ECS/Systems/: ISystem.cpp  ISystem.h  SystemManager.cpp  SystemManager.h
src/ECS/World/: World.cpp  World.h
